Get basic SVG rendering working

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 style="font-family: Helvetica, sans-serif; text-align: center;">Doodle</h1>
 
 <div>
-    <svg style="display: block; margin-left: auto; margin-right: auto;" id="canvas" width="400" height="400"/>
+    <svg style="display: block; margin-left: auto; margin-right: auto;" id="canvas" width="400" height="400" viewBox="0 0 400 400"/>
 </div>
 
 <script type="text/javascript" src="./js/target/scala-2.11/doodle-fastopt.js"></script>
