--- a/svg/example.html
+++ b/svg/example.html
@@ -8,11 +8,11 @@
 
 <h1 style="font-family: Helvetica, sans-serif; text-align: center;">Doodle</h1>
 
-<div>
-    <svg style="display: block; margin-left: auto; margin-right: auto;" id="canvas" width="600" height="600" viewBox="0 0 600 600"/>
+<div style="display: block; margin-left: auto; margin-right: auto;" id="canvas">
 </div>
 
-<script type="text/javascript" src="./js/target/scala-2.12/doodle-fastopt.js"></script>
+<script type="text/javascript" src="./js/target/scala-2.12/doodle-svg-fastopt.js"></script>
 <script type="text/javascript" src="/workbench.js"></script>
+<script type="text/javascript">Main();</script>
 </body>
 </html>
