--- a/svg/example.html
+++ b/svg/example.html
@@ -12,7 +12,7 @@
 </div>
 
 <script type="text/javascript" src="./js/target/scala-2.12/doodle-svg-fastopt.js"></script>
-<script type="text/javascript" src="/workbench.js"></script>
+<!-- <script type="text/javascript" src="/workbench.js"></script> -->
 <script type="text/javascript">Main();</script>
 </body>
 </html>
