--- a/svg/example.html
+++ b/svg/example.html
@@ -8,7 +8,8 @@
 
 <h1 style="font-family: Helvetica, sans-serif; text-align: center;">Doodle</h1>
 
-<div style="display: block; margin-left: auto; margin-right: auto;" id="canvas">
+<div id="canvas"
+     style="margin: auto; height:600px; width:600px;">
 </div>
 
 <script type="text/javascript" src="./js/target/scala-2.12/doodle-svg-fastopt.js"></script>
