--- a/svg/example.html
+++ b/svg/example.html
@@ -14,6 +14,6 @@
 
 <script type="text/javascript" src="./js/target/scala-2.12/doodle-svg-fastopt.js"></script>
 <!-- <script type="text/javascript" src="/workbench.js"></script> -->
-<script type="text/javascript">Main();</script>
+<script type="text/javascript">Main.main();</script>
 </body>
 </html>
