Point to 2.13 build artifact

--- a/svg/example.html
+++ b/svg/example.html
@@ -12,7 +12,7 @@
      style="margin: auto; height:600px; width:600px;">
 </div>
 
-<script type="text/javascript" src="./js/target/scala-2.12/doodle-svg-fastopt.js"></script>
+<script type="text/javascript" src="./js/target/scala-2.13/doodle-svg-opt.js"></script>
 <!-- <script type="text/javascript" src="/workbench.js"></script> -->
 <script type="text/javascript">Main.main();</script>
 </body>
