--- a/examples/examples.html
+++ b/examples/examples.html
@@ -12,8 +12,8 @@
      style="margin: auto; height:600px; width:600px;">
 </div>
 
-<script type="text/javascript" src="./js/target/scala-2.13/doodle-svg-opt.js"></script>
+<script type="text/javascript" src="./js/target/scala-2.13/doodle-examples-opt.js"></script>
 <!-- <script type="text/javascript" src="/workbench.js"></script> -->
-<script type="text/javascript">Main.main();</script>
+<script type="text/javascript">Examples.main();</script>
 </body>
 </html>
