deploy: 01d5799a710b0c8ae1addf1f0664b26c4bdaed88

--- a/algebra/using.html
+++ b/algebra/using.html
@@ -51,7 +51,7 @@
     <div id="content">
         <main class="content">
             <h1 id="using-algebras" class="title">Using Algebras</h1>
-            <p>This section gives recipes for using Doodle&#39;s algebras, targetting one backend or working across multiple backends. You should be familiar with the <a href="/concepts/README.md">concepts</a> behind Doodle to understand everything here.</p>
+            <p>This section gives recipes for using Doodle&#39;s algebras, targetting one backend or working across multiple backends. You should be familiar with the <a href="../concepts/index.html">concepts</a> behind Doodle to understand everything here.</p>
             
             <h2 id="using-a-single-backend" class="section">Using a Single Backend</h2>
             <p>Using a single backend should be straightforward:</p>
