deploy: ffeb047c9329dc0d6bb68ef0ebe885dd2f7b2b38

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p><img src="chessboard.png" alt="A picture of a red and black chessboard"></p>
             
             <h3 id="attention-intellij-users" class="section">Attention IntelliJ Users</h3>
-            <p>The Scala Plugin of IntelliJ still has an open bug which cannot resolve implicits correctly. The above example might give you an Error warning in Line XX. You can ignore this warning, or fix it using <code>chessboard.draw[Algebra, Drawing, Frame, Canvas]()</code>. Please use any text editor and <a href="https://scalameta.org/metals/">Metals</a> to get a better experience using Doodle.</p>
+            <p>The Scala Plugin of IntelliJ still has an open bug which cannot resolve implicits correctly. The above example might give you an Error warning in Line XX. You can ignore this warning, or fix it using <code>chessboard.draw[Algebra, Frame, Canvas]()</code>. Please use any text editor and <a href="https://scalameta.org/metals/">Metals</a> to get a better experience using Doodle.</p>
             
             <h2 id="guides" class="section">Guides</h2>
             <p><a href="image/index.html">Using the Image library</a> is the easiest way to get started drawing with Doodle.</p>
