deploy: 38e579924dee4fd79f503b8919b1b92c86b00d36

--- a/concepts/picture-object.html
+++ b/concepts/picture-object.html
@@ -32,6 +32,7 @@
           <li class="level2 active"><a href="#">Picture Object</a></li>
           <li class="level2"><a href="syntax.html">Syntax</a></li>
           <li class="level2"><a href="frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/path.html">Paths</a></li>
