--- a/image/index.html
+++ b/image/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../concepts/frame-canvas.html">←</a></p>
+    <nav id="topbar"><p><a href="../pictures/index.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="shape.html">→</a></p></nav>
     <nav id="sidebar">
@@ -32,6 +32,7 @@
           <li class="level2"><a href="../concepts/picture-object.html">Picture Object</a></li>
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
           <li class="level1 active"><a href="#">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
