--- a/image/shape.html
+++ b/image/shape.html
@@ -32,6 +32,7 @@
           <li class="level2"><a href="../concepts/picture-object.html">Picture Object</a></li>
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
           <li class="level1"><a href="index.html">Image</a></li>
           <li class="level2 active"><a href="#">Shapes</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
