--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <li class="level2"><a href="concepts/picture-object.html">Picture Object</a></li>
           <li class="level2"><a href="concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="concepts/frame-canvas.html">Frame and Canvas</a></li>
+          <li class="level1"><a href="pictures/index.html">Creating Pictures</a></li>
           <li class="level1"><a href="image/index.html">Image</a></li>
           <li class="level2"><a href="image/shape.html">Shapes</a></li>
           <li class="level2"><a href="image/path.html">Paths</a></li>
