deploy: eb9b463b4933284ee35137139562d0f75e17ea6d

--- a/concepts/picture-object.html
+++ b/concepts/picture-object.html
@@ -57,7 +57,7 @@
             <pre><code class="nohighlight"><span class="type-name">Picture</span><span>.</span><span class="identifier">circle</span><span>(</span><span class="number-literal">100</span><span>)</span></code></pre>
             <p>to call the <code>circle</code> method on <code>Shape</code> instead of the more verbose</p>
             <pre><code class="nohighlight"><span class="identifier">circle</span><span>[</span><span class="type-name">Algebra</span><span>, </span><span class="type-name">Drawing</span><span>](</span><span class="number-literal">100</span><span>)</span></code></pre>
-            <p>Both of these methods create a <code>Picture</code>. If we were to call the <code>Shape</code> algebra directly we&#39;d end up with a <code>Drawing</code>, which is usually not what we want, so Doodle adds this convenience for the API it expects you to use. </p>
+            <p>Both of these methods create a <code>Picture</code>. Calling the <code>Shape</code> algebra directly produces a <code>Drawing</code>, which is usually not what we want, so Doodle adds this convenience for the API it expects you to use. </p>
             <p class="nextPage"><a href="syntax.html">Syntax→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
