--- a/image/writing.html
+++ b/image/writing.html
@@ -33,9 +33,9 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
+          <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level1"><a href="index.html">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
-          <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2"><a href="styling.html">Styling</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2"><a href="transform.html">Transforms</a></li>
