--- a/concepts/index.html
+++ b/concepts/index.html
@@ -33,9 +33,9 @@
           <li class="level2"><a href="syntax.html">Syntax</a></li>
           <li class="level2"><a href="frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
+          <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
-          <li class="level2"><a href="../image/path.html">Paths</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
           <li class="level2"><a href="../image/layout.html">Layout</a></li>
           <li class="level2"><a href="../image/transform.html">Transforms</a></li>
