--- a/image/styling.html
+++ b/image/styling.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="path.html">←</a></p>
+    <nav id="topbar"><p><a href="shape.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="layout.html">→</a></p></nav>
     <nav id="sidebar">
@@ -33,9 +33,9 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
+          <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level1"><a href="index.html">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
-          <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2 active"><a href="#">Styling</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2"><a href="transform.html">Transforms</a></li>
