--- a/pictures/index.html
+++ b/pictures/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="topbar"><p><a href="../concepts/frame-canvas.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="../image/index.html">→</a></p></nav>
+<p><a href="path.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -33,9 +33,9 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1 active"><a href="#">Creating Pictures</a></li>
+          <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
-          <li class="level2"><a href="../image/path.html">Paths</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
           <li class="level2"><a href="../image/layout.html">Layout</a></li>
           <li class="level2"><a href="../image/transform.html">Transforms</a></li>
@@ -54,7 +54,7 @@
             <h1 id="creating-pictures" class="title">Creating Pictures</h1>
             <p>This chapter describes the various different tools available for creating pictures.</p>
             <p>Each section corresponds to an algebra. First the general concept is introduced, then the APIs in terms of <code>Picture</code> and <code>Image</code> (if <code>Image</code> supports the algebra) are discussed.</p>
-            <p class="nextPage"><a href="../image/index.html">Image→</a></p>
+            <p class="nextPage"><a href="path.html">Paths→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
