--- a/pictures/shape.html
+++ b/pictures/shape.html
@@ -62,10 +62,11 @@
 
 </span><span class="keyword">val</span><span> </span><span class="identifier">basicShapes</span><span> =
   </span><span class="type-name">Picture</span><span>
-    .</span><span class="identifier">circle</span><span>(</span><span class="number-literal">100</span><span>)
-    .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">aqua</span><span>)
-    .</span><span class="identifier">beside</span><span>(</span><span class="type-name">Picture</span><span>.</span><span class="identifier">triangle</span><span>(</span><span class="number-literal">100</span><span>, </span><span class="number-literal">100</span><span>).</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">blue</span><span>))
-    .</span><span class="identifier">beside</span><span>(</span><span class="type-name">Picture</span><span>.</span><span class="identifier">square</span><span>(</span><span class="number-literal">100</span><span>).</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">darkBlue</span><span>))</span></code></pre>
+    .</span><span class="identifier">circle</span><span>(</span><span class="number-literal">200</span><span>)
+    .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">blue</span><span>)
+    .</span><span class="identifier">on</span><span>(</span><span class="type-name">Picture</span><span>.</span><span class="identifier">square</span><span>(</span><span class="number-literal">125</span><span>).</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">darkBlue</span><span>))
+    .</span><span class="identifier">on</span><span>(</span><span class="type-name">Picture</span><span>.</span><span class="identifier">triangle</span><span>(</span><span class="number-literal">100</span><span>, </span><span class="number-literal">100</span><span>).</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">crimson</span><span>))
+    .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">5.0</span><span>)</span></code></pre>
             <p>This program gives the output below.</p>
             <div class="default-image-block">
               <img src="basic-shapes.png">
