--- a/pictures/path.html
+++ b/pictures/path.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="shape.html">←</a></p>
+    <nav id="topbar"><p><a href="layout.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="../image/index.html">→</a></p></nav>
     <nav id="sidebar">
@@ -34,6 +34,7 @@
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
           <li class="level2"><a href="shape.html">Shape</a></li>
+          <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2 active"><a href="#">Paths</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
