--- a/concepts/frame-canvas.html
+++ b/concepts/frame-canvas.html
@@ -33,7 +33,7 @@
           <li class="level2"><a href="syntax.html">Syntax</a></li>
           <li class="level2 active"><a href="#">Frame and Canvas</a></li>
           <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
-          <li class="level2"><a href="../pictures/shape.html">Shape</a></li>
+          <li class="level2"><a href="../pictures/shape.html">Shapes</a></li>
           <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
