--- a/pictures/index.html
+++ b/pictures/index.html
@@ -33,7 +33,7 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1 active"><a href="#">Creating Pictures</a></li>
-          <li class="level2"><a href="shape.html">Shape</a></li>
+          <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
@@ -56,7 +56,7 @@
             <h1 id="creating-pictures" class="title">Creating Pictures</h1>
             <p>This chapter describes the various different tools available for creating pictures.</p>
             <p>Each section corresponds to an algebra. First the general concept is introduced, then the APIs in terms of <code>Picture</code> and <code>Image</code> (if <code>Image</code> supports the algebra) are discussed.</p>
-            <p class="nextPage"><a href="shape.html">Shape→</a></p>
+            <p class="nextPage"><a href="shape.html">Shapes→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
