--- a/pictures/path.html
+++ b/pictures/path.html
@@ -33,7 +33,7 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
-          <li class="level2"><a href="shape.html">Shape</a></li>
+          <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2 active"><a href="#">Paths</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
