deploy: 9ea691222e188e2b2d2edb634c5e7daacd4a434c

--- a/pictures/layout.html
+++ b/pictures/layout.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="shape.html">←</a></p>
+    <nav id="topbar"><p><a href="path.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="path.html">→</a></p></nav>
+<p><a href="../image/index.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -34,8 +34,8 @@
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
-          <li class="level2 active"><a href="#">Layout</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
+          <li class="level2 active"><a href="#">Layout</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
@@ -166,7 +166,7 @@
             
             <h2 id="implementation" class="section">Implementation</h2>
             <p>The <code>Layout</code> algebra supports all the features described above. <code>Image</code> doesn&#39;t support <code>originAt</code>, <code>margin</code>, or landmarks.</p>
-            <p class="nextPage"><a href="path.html">Paths→</a></p>
+            <p class="nextPage"><a href="../image/index.html">Image→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
