--- a/image/index.html
+++ b/image/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../pictures/path.html">←</a></p>
+    <nav id="topbar"><p><a href="../pictures/layout.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="shape.html">→</a></p></nav>
     <nav id="sidebar">
@@ -34,8 +34,8 @@
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="../pictures/index.html">Creating Pictures</a></li>
           <li class="level2"><a href="../pictures/shape.html">Shapes</a></li>
-          <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level2"><a href="../pictures/path.html">Paths</a></li>
+          <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level1 active"><a href="#">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="styling.html">Styling</a></li>
