--- a/pictures/path.html
+++ b/pictures/path.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="layout.html">←</a></p>
+    <nav id="topbar"><p><a href="shape.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="../image/index.html">→</a></p></nav>
+<p><a href="layout.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -34,8 +34,8 @@
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
-          <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2 active"><a href="#">Paths</a></li>
+          <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
@@ -124,7 +124,7 @@
             <div class="default-image-block">
               <img src="curve.png">
             </div>
-            <p class="nextPage"><a href="../image/index.html">Image→</a></p>
+            <p class="nextPage"><a href="layout.html">Layout→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
