--- a/pictures/shape.html
+++ b/pictures/shape.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="topbar"><p><a href="index.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="layout.html">→</a></p></nav>
+<p><a href="path.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -34,8 +34,8 @@
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
           <li class="level2 active"><a href="#">Shapes</a></li>
-          <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
+          <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
@@ -83,7 +83,7 @@
             
             <h2 id="implementation" class="section">Implementation</h2>
             <p>These methods are available on both the <code>Shape</code> algebra and <code>Image</code>.</p>
-            <p class="nextPage"><a href="layout.html">Layout→</a></p>
+            <p class="nextPage"><a href="path.html">Paths→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
