deploy: cc017e6178d37e494c75abc7a4bf2c3948be07d0

--- a/image/index.html
+++ b/image/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../pictures/layout.html">←</a></p>
+    <nav id="topbar"><p><a href="../pictures/style.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="shape.html">→</a></p></nav>
     <nav id="sidebar">
@@ -36,6 +36,7 @@
           <li class="level2"><a href="../pictures/shape.html">Shapes</a></li>
           <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
+          <li class="level2"><a href="../pictures/style.html">Style</a></li>
           <li class="level1 active"><a href="#">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="styling.html">Styling</a></li>
