--- a/pictures/layout.html
+++ b/pictures/layout.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="topbar"><p><a href="path.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="../image/index.html">→</a></p></nav>
+<p><a href="style.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -36,6 +36,7 @@
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2 active"><a href="#">Layout</a></li>
+          <li class="level2"><a href="style.html">Style</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
@@ -166,7 +167,7 @@
             
             <h2 id="implementation" class="section">Implementation</h2>
             <p>The <code>Layout</code> algebra supports all the features described above. <code>Image</code> doesn&#39;t support <code>originAt</code>, <code>margin</code>, or landmarks.</p>
-            <p class="nextPage"><a href="../image/index.html">Image→</a></p>
+            <p class="nextPage"><a href="style.html">Style→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
