--- a/image/shape.html
+++ b/image/shape.html
@@ -36,6 +36,7 @@
           <li class="level2"><a href="../pictures/shape.html">Shapes</a></li>
           <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
+          <li class="level2"><a href="../pictures/style.html">Style</a></li>
           <li class="level1"><a href="index.html">Image</a></li>
           <li class="level2 active"><a href="#">Shapes</a></li>
           <li class="level2"><a href="styling.html">Styling</a></li>
