--- a/pictures/index.html
+++ b/pictures/index.html
@@ -36,6 +36,7 @@
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
+          <li class="level2"><a href="style.html">Style</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
