deploy: 01546eef3f7fa362abe0c38892a0fd199ff35857

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li class="level2"><a href="concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="pictures/index.html">Creating Pictures</a></li>
+          <li class="level2"><a href="pictures/picture-image.html">Picture and Image</a></li>
           <li class="level2"><a href="pictures/shape.html">Shapes</a></li>
           <li class="level2"><a href="pictures/path.html">Paths</a></li>
           <li class="level2"><a href="pictures/layout.html">Layout</a></li>
