--- a/pictures/index.html
+++ b/pictures/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="topbar"><p><a href="../concepts/frame-canvas.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="shape.html">→</a></p></nav>
+<p><a href="picture-image.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -33,6 +33,7 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1 active"><a href="#">Creating Pictures</a></li>
+          <li class="level2"><a href="picture-image.html">Picture and Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
@@ -55,9 +56,8 @@
     <div id="content">
         <main class="content">
             <h1 id="creating-pictures" class="title">Creating Pictures</h1>
-            <p>This chapter describes the various different tools available for creating pictures.</p>
-            <p>Each section corresponds to an algebra. First the general concept is introduced, then the APIs in terms of <code>Picture</code> and <code>Image</code> (if <code>Image</code> supports the algebra) are discussed.</p>
-            <p class="nextPage"><a href="shape.html">Shapes→</a></p>
+            <p>This chapter describes how to create pictures. It starts by discussing the two APIs Doodle provides to construct pictures, <code>Image</code> and <code>Picture</code>. It then describes the different features Doodle provides to create and style pictures.</p>
+            <p class="nextPage"><a href="picture-image.html">Picture and Image→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
