--- a/pictures/path.html
+++ b/pictures/path.html
@@ -33,6 +33,7 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
+          <li class="level2"><a href="picture-image.html">Picture and Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2 active"><a href="#">Paths</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
