--- a/pictures/shape.html
+++ b/pictures/shape.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="index.html">←</a></p>
+    <nav id="topbar"><p><a href="picture-image.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="path.html">→</a></p></nav>
     <nav id="sidebar">
@@ -33,6 +33,7 @@
           <li class="level2"><a href="../concepts/syntax.html">Syntax</a></li>
           <li class="level2"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
           <li class="level1"><a href="index.html">Creating Pictures</a></li>
+          <li class="level2"><a href="picture-image.html">Picture and Image</a></li>
           <li class="level2 active"><a href="#">Shapes</a></li>
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
