deploy: 0699a1f6a573a5becff3ce7f94cea069bcfe0223

--- a/pictures/layout.html
+++ b/pictures/layout.html
@@ -38,6 +38,8 @@
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2 active"><a href="#">Layout</a></li>
           <li class="level2"><a href="style.html">Style</a></li>
+          <li class="level2"><a href="transform.html">Transforms</a></li>
+          <li class="level2"><a href="writing.html">Writing Output</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
