--- a/image/index.html
+++ b/image/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../pictures/style.html">←</a></p>
+    <nav id="topbar"><p><a href="../pictures/writing.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="shape.html">→</a></p></nav>
     <nav id="sidebar">
@@ -38,6 +38,8 @@
           <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level2"><a href="../pictures/style.html">Style</a></li>
+          <li class="level2"><a href="../pictures/transform.html">Transforms</a></li>
+          <li class="level2"><a href="../pictures/writing.html">Writing Output</a></li>
           <li class="level1 active"><a href="#">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="styling.html">Styling</a></li>
