--- a/image/layout.html
+++ b/image/layout.html
@@ -38,6 +38,8 @@
           <li class="level2"><a href="../pictures/path.html">Paths</a></li>
           <li class="level2"><a href="../pictures/layout.html">Layout</a></li>
           <li class="level2"><a href="../pictures/style.html">Style</a></li>
+          <li class="level2"><a href="../pictures/transform.html">Transforms</a></li>
+          <li class="level2"><a href="../pictures/writing.html">Writing Output</a></li>
           <li class="level1"><a href="index.html">Image</a></li>
           <li class="level2"><a href="shape.html">Shapes</a></li>
           <li class="level2"><a href="styling.html">Styling</a></li>
