--- a/pictures/picture-image.html
+++ b/pictures/picture-image.html
@@ -38,6 +38,8 @@
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2"><a href="style.html">Style</a></li>
+          <li class="level2"><a href="transform.html">Transforms</a></li>
+          <li class="level2"><a href="writing.html">Writing Output</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
