--- a/pictures/style.html
+++ b/pictures/style.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="topbar"><p><a href="layout.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p><a href="../image/index.html">→</a></p></nav>
+<p><a href="transform.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1"><a href="../index.html">Doodle</a></li>
@@ -38,6 +38,8 @@
           <li class="level2"><a href="path.html">Paths</a></li>
           <li class="level2"><a href="layout.html">Layout</a></li>
           <li class="level2 active"><a href="#">Style</a></li>
+          <li class="level2"><a href="transform.html">Transforms</a></li>
+          <li class="level2"><a href="writing.html">Writing Output</a></li>
           <li class="level1"><a href="../image/index.html">Image</a></li>
           <li class="level2"><a href="../image/shape.html">Shapes</a></li>
           <li class="level2"><a href="../image/styling.html">Styling</a></li>
@@ -150,7 +152,7 @@
               <li><code>strokeColor</code>, <code>strokeWidth</code> and <code>noStroke</code>; and</li>
               <li><code>fillColor</code>, <code>fillGradient</code>, and <code>noFill</code>.</li>
             </ul>
-            <p class="nextPage"><a href="../image/index.html">Image→</a></p>
+            <p class="nextPage"><a href="transform.html">Transforms→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
