deploy: a0831630ea86e9fc665feaa429d7abd28d7610eb

--- a/pictures/writing.html
+++ b/pictures/writing.html
@@ -76,7 +76,7 @@
             <pre><code class="nohighlight"><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">core</span><span>.</span><span class="identifier">format</span><span>.</span><span class="identifier">_</span></code></pre>
             <p>This import makes available the standard formats supported by Doodle. </p>
             
-            <h2 id="writing-an-image" class="section">Writing an Image</h2>
+            <h2 id="writing-to-a-file" class="section">Writing to a File</h2>
             <p>Call the <code>write</code> method to write to a file, giving the format as a type parameter and the file name as a <code>String</code> parameter. For example, to write a PNG to the file called <code>&quot;circle.png&quot;</code></p>
             <pre><code class="nohighlight"><span class="keyword">val</span><span> </span><span class="identifier">circle</span><span> = </span><span class="type-name">Picture</span><span>.</span><span class="identifier">circle</span><span>(</span><span class="number-literal">100</span><span>)
   .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">10.0</span><span>)
